--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+/src/environments/
 # prevent people from having access to our environment
-/src/environments/**
 
 # Compiled output
 /dist
 /tmp
 /out-tsc
+# Only exists if Bazel was run
 /bazel-out
 
 # Node
